# tuf-manager

./: LICENSE  README.md  meson.build  meson_options.txt
contrib/: meson.build
contrib/openrc/: meson.build  permission.sh  tufmanager  tufmanager.in
contrib/runit/: meson.build  run.in
contrib/s6/: meson.build  run.in
contrib/systemd/: meson.build  tufmanager.service.in
data/: meson.build  tuf-manager.desktop.in  tuf-tray.desktop.in
data/dbus/: meson.build  org.tuf.manager.server.conf  org.tuf.manager.server.service.in
data/gschema/: meson.build  org.tuf.manager.gschema.xml
data/icons/: meson.build
data/man/: meson.build  tuf-cli.1  tuf-gui.1  tuf-tray.1
data/openrc/: meson.build  tufmanager.in
data/polkit/: meson.build  org.tuf.manager.policy.in
data/s6/: meson.build
data/systemd/: meson.build  tufmanager.service.in
data/ui/: meson.build  tuf.manager.gresource.xml  tuf.manager.window.ui
docs/: meson.build
po/: POTFILES  es.po  meson.build  tuf-manager.pot
script/: compile_schemas.sh  meson.build
src/: cli.vala  common.vala  config.vala.in  error.vala  gui-window.vala  gui.vala  main.vala.in  meson.build  server-interface.vala  server-main.vala  server.vala  tray-icon.vala  tray-main.vala  tray.vala
