option(
    'valadocs',
    type: 'boolean',
    value: true,
    description: 'Build valadocs'
)
option(
    'valadocs-deps',
    type: 'boolean',
    value: false,
    description: 'Build the valadocs of the dependencies'
)
option(
    'build-cli',
    type : 'boolean',
    value: true,
    description: 'Build the command line interface to TUF Manager'
)
option(
    'build-gui',
    type : 'boolean',
    value: true,
    description: 'Build the graphical user interface to TUF Manager'
)
option(
    'always-authenticated',
    type : 'boolean',
    value: true,
    description: 'User is always authenticated, so no password is necessary'
)
option(
    'openrc',
    type : 'boolean',
    value: false,
    description: 'Install OpenRC script'
)
